# ray-ten

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html  ray-ten.wasm
.cargo/: config.toml
src/: ai.rs  camera.rs  color.rs  game_driver.rs  main.rs  material.rs  math.rs  motion.rs  render.rs  scene.rs  ui.rs
src/render/: camera.rs  mod.rs  render.rs  renderer.rs  scene.rs  tracer.rs
src/simd/: camera.rs  mod.rs  render.rs  scene.rs
