[package]
name = "ray-ten"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24"
anyhow = "1"
parry3d = "0.8"
rand = "0.8"
num = "0.4"

[profile.release]
lto = true
codegen-units = 1
debug = 1